[gd_scene load_steps=4 format=3 uid="uid://du80xllpmrqxr"]

[ext_resource type="Script" uid="uid://dhg87r1rhvsec" path="res://Scripts/Games.gd" id="1_g0sg0"]
[ext_resource type="Texture2D" uid="uid://cyvbfieahn8ms" path="res://Resources/Backgrounds/SettingsBg.jpg" id="2_54okw"]
[ext_resource type="Theme" uid="uid://diocpnu618dec" path="res://Themes/MyTheme.tres" id="4_by211"]

[node name="Games" type="Node2D"]
script = ExtResource("1_g0sg0")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1152.0
offset_bottom = 654.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_54okw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 109.0
offset_top = 154.0
offset_right = 1029.0
offset_bottom = 655.0
theme = ExtResource("4_by211")
theme_override_constants/separation = 40

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="Game_1" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Game_1"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Games_2" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Games_2"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Quit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Game_1" to="." method="_on_game_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Games_2" to="." method="_on_games_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
